@@ -72,7 +72,7 @@
          "web" : "https://github.com/Csson/p5-mojolicious-plugin-bootstraphelpers"
       }
    },
-   "version" : "0.0161",
+   "version" : "0.0170",
    "x_contributors" : [
       "Erik Carlsson <info@code301.com>"
    ]
